Updating rover missions to include required and optional cargo.  A rover mission can still embark from a settlement if its optional cargo cannot be loaded or isn't available, but the required cargo must be loaded. Fixing bug in credit tab panel in settlement info window when a new settlement arrives on Mars.